tests/snapshots/assets__check_file@unit-code-multiline-string.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/multiline-string.typ
---
#{
  assert(
    true,
    message: "Target 
              qubit for multi qubit gate does not exist aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  )
}
