tests/snapshots/assets__check_file@unit-code-param-len.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/param-len.typ
snapshot_kind: text
---
#let get-page-dim-writer() = locate(w_loc => { })
#let get-page-dim-writer(
  a,
) = locate(w_loc => { })
#let get-page-dim-writer(
  a,
  b,
) = locate(w_loc => { })
#let get-page-dim-writer(
  a,
  b,
  c,
) = locate(w_loc => { })
#let get-page-dim-writer(
  a,
  b,
  c,
) = locate(w_loc => { })
