tests/snapshots/assets__check_file@unit-code-param-len.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/param-len.typ
---
#let get-page-dim-writer() = locate(w_loc => { })
#let get-page-dim-writer(a) = locate(w_loc => { })
#let get-page-dim-writer(a, b) = locate(w_loc => { })
#let get-page-dim-writer(a, b, c) = locate(w_loc => { })
#let get-page-dim-writer(
  aaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbb, cccccccccccc
) = locate(w_loc => { })
#let get-page-dim-writer(
  a,
  b,
  c,
) = locate(w_loc => { })
