tests/snapshots/assets__check_file@unit-code-paren-extra.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/paren-extra.typ
snapshot_kind: text
---
#{
  let a = (1 + 2)
  a
}

#{
  let x = (1, 2, 3.4)
  let (a, b, ..) = x
  a + b
}

#{
  let x = (1, 2, 3.4)
  let (a, b, ..) = x
  a + b
}


#{
  if (1 + 2 == 3) {
    1
  } else {
    2
  }
}


#{
  if (1 + 2 == 3) {
    1
  } else {
    2
  }
}

#{
  while (2 < 1) {
    1
  }
}

#{
  while (2 < 1) {
    1
  }
}

#{
  for (i) in range(0, 5) {
    [#i]
  }
}

#let ((a),) = (1,)
#let ((a),) = (1,)

#let a = (b: (c: 3))
#let a = { true }
#let a = [()]
