tests/snapshots/assets__check_file@unit-code-paren-in-key.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/paren-in-key.typ
snapshot_kind: text
---
#let name = "naming";
#let a = (name: 1)
#let b = ((name): 1)
#let c = ((name): 1)
#let d = ("name": 1)
#let e = ("name": 1)
